Adjusted header min-width to prevent overlap

--- a/G26/style/base.css
+++ b/G26/style/base.css
@@ -8,7 +8,7 @@ html {
 header {
 	height: 105px;
 	width: 100%;
-	min-width: 1350px;
+	min-width: 1400px;
 	position: fixed;
 	top: 0;
 	background-color: white;
@@ -23,6 +23,7 @@ header a {
 #banner {
 	white-space: nowrap;
 	padding: 0.65%;
+	margin-left: 30px;
 	position: fixed;
 	width: 100%;
 }
@@ -83,6 +84,7 @@ nav {
 	float: right;
 	position: relative;
 	margin-top: 30px;
+	margin-right: 30px;
 	/**top: 32px; */
 	display: -webkit-flex;
 	display: flex;
